       must also set `background.modX' and `background.modY' to integers
     - added `background: none' for styles that do not include a background
     - fixed bug with style backgrounds not getting set when changing styles
     - updated default styles to be valid wrt background options
     RootTheme.cc/hh Screen.cc FbTk/Theme.hh
*07/01/13:
   * Only change focus order when user specifically focuses a window (Mark)
     Screen.cc Window.cc FocusControl.cc/hh
*07/01/11:
   * Added option to :Minimize key command to lower all windows in the same
     layer as the focused window -- syntax is `:Minimize (layer)' (Mark)
     FbCommandFactory.cc WorkspaceCmd.cc/hh
*07/01/08:
   * Fix another 64-bit window property (Mark/Simon)
     FbTk/FbWindow.cc
*07/01/07:
   * Update Iconbar Mode menu when updating settings (Mark)
     IconbarTool.cc
   * Fixed workspace warping going crazy, bug #1467124 (Mark)
     Window.cc
   * Fix little bug with iconbar rendering, bug #1549209 (Mark)
     IconbarTool.cc
   * Fix RefCount crash and Slit deconstruction ordering (Simon)
     RefCount.hh Slit.hh/cc
   * Support per-window transparency settings.
      (Simon and thanks Julien Trolet, dmxen at sourceforge dot net)
       sf.net patch #1511042, feature #1108692
      - new "Transparency" menu in the window menu
      - new apps file attribute: 
         [alpha] {int int} (or just {int})
        Where numbers represent focused and unfocused transparency, 
        respectively. One number only will be used for both.
      - Also, show toggle status for shade and stick in window menu.
     fluxbox-nls.hh AlphaMenu.hh/cc BoolMenuItem.hh FbTk/Menu.hh 
     FbTk/MenuItem.hh FbTk/Resource.hh FbWinFrame.hh/cc IntResMenuItem.hh/cc
     MenuCreator.cc ObjectResource.hh Remember.hh/cc Screen.cc Slit.cc
     Window.hh/cc Toolbar.cc Makefile.am AlphaMenu.hh/cc ObjectResource.hh
*07/01/06:
   * Updated nb_NO translations (thanks emptydoor at users dot sf dot net)
     nls/nb_NO/Translation.m